--- a/application/pages/crm/modals/add_contact.html
+++ b/application/pages/crm/modals/add_contact.html
@@ -1,20 +1,20 @@
 {% from '_form.html' import vertical_field %}
 
 {% block page_js %}
-    <script src="/pages/crm/modals/add_organisation.js"></script>{% endblock %}
+    <script src="/pages/crm/modals/add_contact.js"></script>{% endblock %}
 {% block page_css %}  
-    <link rel="stylesheet" href="/pages/crm/modals/add_organisation.css"/>{% endblock %}
-<div class="modal fade" id="myModalOrg" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <link rel="stylesheet" href="/pages/crm/modals/add_contact.css"/>{% endblock %}
+<div class="modal fade" id="myModalCon" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Add organisation</h4>
+        <h4 class="modal-title" id="myModalLabel">Add contact</h4>
       </div>
       <div class="modal-body">
-                <form method="post" class="form-signin" action="{{ url_for('crm.add_organisation') }}">
-                    {{ OrgForm.csrf_token() }}
-                    {% for i in OrgForm %}
+                <form method="post" class="form-signin" action="{{ url_for('crm.add_contact') }}">
+                    {{ ConForm.csrf_token() }}
+                    {% for i in ConForm %}
                     {% if i.id == 'csrf_token' %}
                     {% else %}
                     {{ vertical_field(i) }}
@@ -22,10 +22,10 @@
                     {% endfor %}  
 
   
-                    <button type="submit" type="submit" class="btn btn-lg btn-primary btn-block">Add organisation</button>
+                    <button type="submit" type="submit" class="btn btn-lg btn-primary btn-block">Add contact</button>
                 
         <!--button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button"  class="btn btn-primary">Add organisation</button-->
+        <button type="button"  class="btn btn-primary">Add contact</button-->
         </form>
       </div>
     </div>
