--- a/application/pages/layout.html
+++ b/application/pages/layout.html
@@ -39,6 +39,9 @@
 
 <body>
 
+{% include 'crm/modals/add_organisation.html' %}
+{% include 'crm/modals/add_contact.html' %}
+
 {# Flash message #}
 {% with message = get_flashed_messages()[0] %}
     {% if message %}
@@ -54,7 +57,6 @@
 
 {% include 'footer/footer.html' %}
 
-{% include 'crm/modals/add_organisation.html'%}
 
 {# JS layout #}
 <script src="/static/js/layout.js"></script>
