--- a/application/pages/nav/nav.html
+++ b/application/pages/nav/nav.html
@@ -38,7 +38,9 @@
 
 			    <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Add</a>
 			    <ul class="dropdown-menu">
-				<li><a type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal" href="{{url_for('crm.add_organisation')}}">Organisation</a></li>	
+				<li><a type="button" class="btn" data-toggle="modal" data-target="#myModalOrg">Organisation</a></li>
+                <li><a type="button" class="btn" data-toggle="modal" data-target="#myModalCon">Contact</a></li>   
+	
 			    </ul>
 		    </li>
                     <li>
