--- a/application/pages/nav/nav.html
+++ b/application/pages/nav/nav.html
@@ -39,7 +39,12 @@
 			    <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Add</a>
 			    <ul class="dropdown-menu">
 				<li><a type="button" class="btn" data-toggle="modal" data-target="#myModalOrg">Organisation</a></li>
-                <li><a type="button" class="btn" data-toggle="modal" data-target="#myModalCon">Contact</a></li>   
+                <li><a type="button" class="btn" data-toggle="modal" data-target="#myModalCon">Contact</a></li>
+                <li><a type="button" class="btn" data-toggle="modal" data-target="#myModalPro">Project</a></li>
+                <li><a type="button" class="btn" data-toggle="modal" data-target="#myModalAct">Activity</a></li>
+                <li><a type="button" class="btn" data-toggle="modal" data-target="#myModalInv">Invoice</a></li>   
+   
+   
 	
 			    </ul>
 		    </li>
