--- a/application/pages/crm/modals/add_activity.html
+++ b/application/pages/crm/modals/add_activity.html
@@ -1,19 +1,19 @@
 
 {% block page_js %}
-    <script src="/pages/crm/modals/add_organisation.js"></script>{% endblock %}
+    <script src="/pages/crm/modals/add_activity.js"></script>{% endblock %}
 {% block page_css %}  
-    <link rel="stylesheet" href="/pages/crm/modals/add_organisation.css"/>{% endblock %}
-<div class="modal fade" id="myModalOrg" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <link rel="stylesheet" href="/pages/crm/modals/add_activity.css"/>{% endblock %}
+<div class="modal fade" id="myModalAct" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Add organisation</h4>
+        <h4 class="modal-title" id="myModalLabel">Add activity</h4>
       </div>
       <div class="modal-body">
-                <form method="post" class="form-signin" action="{{ url_for('crm.add_organisation') }}">
-                    {{ OrgForm.csrf_token() }}
-                    {% for i in OrgForm %}
+                <form method="post" class="form-signin" action="{{ url_for('crm.add_activity') }}">
+                    {{ ActForm.csrf_token() }}
+                    {% for i in ActForm %}
                     {% if i.id == 'csrf_token' %}
                     {% else %}
                     {{ vertical_field(i) }}
@@ -21,7 +21,7 @@
                     {% endfor %}  
 
   
-                    <button type="submit" type="submit" class="btn btn-lg btn-primary btn-block">Add organisation</button>
+                    <button type="submit" type="submit" class="btn btn-lg btn-primary btn-block">Add activity</button>
                 
         <!--button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
         <button type="button"  class="btn btn-primary">Add organisation</button-->
