--- a/application/pages/crm/modals/add_invoice.html
+++ b/application/pages/crm/modals/add_invoice.html
@@ -1,19 +1,18 @@
-
 {% block page_js %}
-    <script src="/pages/crm/modals/add_organisation.js"></script>{% endblock %}
+    <script src="/pages/crm/modals/add_invoice.js"></script>{% endblock %}
 {% block page_css %}  
-    <link rel="stylesheet" href="/pages/crm/modals/add_organisation.css"/>{% endblock %}
-<div class="modal fade" id="myModalOrg" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <link rel="stylesheet" href="/pages/crm/modals/add_invoice.css"/>{% endblock %}
+<div class="modal fade" id="myModalInv" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Add organisation</h4>
+        <h4 class="modal-title" id="myModalLabel">Add invoice</h4>
       </div>
       <div class="modal-body">
-                <form method="post" class="form-signin" action="{{ url_for('crm.add_organisation') }}">
-                    {{ OrgForm.csrf_token() }}
-                    {% for i in OrgForm %}
+                <form method="post" class="form-signin" action="{{ url_for('crm.add_invoice') }}">
+                    {{ InvForm.csrf_token() }}
+                    {% for i in InvForm %}
                     {% if i.id == 'csrf_token' %}
                     {% else %}
                     {{ vertical_field(i) }}
@@ -21,7 +20,7 @@
                     {% endfor %}  
 
   
-                    <button type="submit" type="submit" class="btn btn-lg btn-primary btn-block">Add organisation</button>
+                    <button type="submit" type="submit" class="btn btn-lg btn-primary btn-block">Add invoice</button>
                 
         <!--button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
         <button type="button"  class="btn btn-primary">Add organisation</button-->
@@ -31,3 +30,8 @@
   </div>
 </div>
 </div>
+<script>
+$('#issue_date').datepicker({
+  format: 'yyyy-mm-dd'
+});
+</script>
