--- a/application/pages/crm/modals/add_contact.html
+++ b/application/pages/crm/modals/add_contact.html
@@ -1,8 +1,7 @@
 
-{% block page_js %}
-    <script src="/pages/crm/modals/add_contact.js"></script>{% endblock %}
+{% block page_js %}{% endblock %}
 {% block page_css %}  
-    <link rel="stylesheet" href="/pages/crm/modals/add_contact.css"/>{% endblock %}
+    <link rel="stylesheet" href="/pages/crm/modals/add.css"/>{% endblock %}
 <div class="modal fade" id="myModalCon" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -11,7 +10,7 @@
         <h4 class="modal-title" id="myModalLabel">Add contact</h4>
       </div>
       <div class="modal-body">
-                <form method="post" class="form-signin" action="{{ url_for('crm.add_contact') }}">
+                <form method="post" class="form-signin" action="/add/contact">
                     {{ ConForm.csrf_token() }}
                     {% for i in ConForm %}
                     {% if i.id == 'csrf_token' %}
@@ -22,9 +21,6 @@
 
   
                     <button type="submit" type="submit" class="btn btn-lg btn-primary btn-block">Add contact</button>
-                
-        <!--button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button"  class="btn btn-primary">Add contact</button-->
         </form>
       </div>
     </div>
