--- a/application/pages/nav/nav.html
+++ b/application/pages/nav/nav.html
@@ -1,5 +1,5 @@
 
-<nav class="navbar navbar-default navbar-static-top">
+<nav class="navbar navbar-inverse navbar-default navbar-static-top">
     <div class="container">
         <div class="navbar-header">
             <a class="navbar-brand" href="{{ url_for('site.index') }}">
