--- a/application/pages/nav/nav.html
+++ b/application/pages/nav/nav.html
@@ -57,7 +57,7 @@
                             {% for i in tables %}
                             {% if i == 'user' %}
                             {% else %}
-                            <li><a href="../view/{{i + 's'}}">{{i.capitalize()}}</a></li>
+                            <li><a href="../view/{{i}}">{{i.capitalize()}}</a></li>
                             {% endif %}
                             {% endfor %}
                         </ul>
